# swe_smith_grpo

./: .gitignore  DESCRIPTION.md  README.md  manual_prompts.md  pilot.jsonl
.github/workflows/: build.yml
agent/: pyproject.toml
agent/src/agent/: __init__.py  async_local_env.py  docker_env.py  environment.py  local_env.py  models.py
agent/tests/: test_docker_env.py  test_local_env.py
common/: pyproject.toml
common/src/common/: __init__.py  config.py  ids.py  ipc.py  logging.py  reward.py  tool_surface.py
common/src/common/session/: __init__.py  manifest.py  memory.py  session_dir.py  state.py  ticket.py
common/tests/: test_reward.py  test_session.py  test_tool_surface.py
datagen/: pilot_gen.py  pyproject.toml
datagen/src/datagen/: __init__.py  config.py  nebius_client.py  pilot_gen.py  pipeline.py  repo_manager.py  validator.py  yield_logger.py
datagen/src/datagen/methods/: __init__.py  base.py  lm.py  pr_mirror.py  procedural.py
datagen/src/datagen/writers/: __init__.py  harbor_dir.py  swebench_jsonl.py
datagen/tests/: test_methods.py  test_writers.py
evaluation/: pyproject.toml
evaluation/src/evaluation/: __init__.py  config.py  eval_cli.py  rollout.py  runner.py  sample.py  vllm_server.py
evaluation/tests/: test_runner.py  test_sample.py
infra/: datagen.Dockerfile  docker-compose.datagen.yml  docker-compose.evaluate.yml  docker-compose.train.yml  evaluate.Dockerfile  rollout.Dockerfile  run_train.sh  runpod-notes.md  train.Dockerfile
training/: pyproject.toml  train.py
training/src/swe_agent_env/: __init__.py
training/src/training/: __init__.py  checkpoint.py  config.py  session_logger.py  swe_env.py  train.py  watchdog.py
training/src/training/configs/: infer.toml  orch.toml  train.toml
training/src/training/schema/: __init__.py  harbor.py
training/tests/: test_checkpoint.py  test_orchestrator.py  test_reward_defenses.py
