[project]
name = "agent"
version = "0.1.0"
description = "Shared Environment ABC + Local/Docker implementations for ml_systems"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aiodocker>=0.24.0",
]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "pytest-timeout>=2.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 60
