[project]
name = "common"
version = "0.1.0"
description = "Shared reward/tool/session infrastructure for ml_systems"
requires-python = ">=3.12,<3.13"
dependencies = [
    "agent",
]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "pytest-timeout>=2.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/common"]

[tool.uv.sources]
agent = { path = "../agent" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
