[project]
name = "datagen"
version = "0.1.0"
description = "Phase 1: SWE-Smith synthetic data generation for ml_systems"
requires-python = ">=3.12,<3.13"
dependencies = [
    "agent",
    "common",
    "openai>=1.40.0",
    "httpx>=0.27.0",
    "tenacity>=9.0",
    "gitpython>=3.1.43",
    "unidiff>=0.7.5",
    "aiofiles>=24.1",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "pytest-timeout>=2.3"]

[project.scripts]
datagen = "datagen.pilot_gen:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/datagen"]

[tool.uv.sources]
agent = { path = "../agent" }
common = { path = "../common" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
