[project]
name = "evaluation"
version = "0.1.0"
description = "Phase 3: post-training evaluation on 20 SWE-bench Verified + 10 heldout instances"
requires-python = ">=3.12,<3.13"
dependencies = [
    "agent",
    "common",
    "aiodocker>=0.24",
    "httpx>=0.27",
    "tenacity>=9.0",
    "tomli>=2.0",
    "pydantic>=2.6",
    "aiofiles>=24.1",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.5",
    "transformers>=4.56",
    "vllm>=0.6.0",
    "datasets>=2.20",
    "peft>=0.11",
]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "pytest-timeout>=2.3"]

[project.scripts]
evaluate = "evaluation.eval_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/evaluation"]

[tool.uv.sources]
agent = { path = "../agent" }
common = { path = "../common" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
