[project]
name = "training"
version = "0.1.0"
description = "Phase 2: GRPO+ RL training loop around SWE-agent-LM-7B via prime-rl"
requires-python = ">=3.12,<3.13"
dependencies = [
    "agent",
    "common",
    "aiodocker>=0.24",
    "httpx>=0.27",
    "tenacity>=9.0",
    "tomli>=2.0",
    "pydantic>=2.6",
    "aiofiles>=24.1",
]

[project.optional-dependencies]
# prime-rl itself is NOT in this list — it has extensive transitive git deps
# (verifiers, torchtitan, transformers git rev, cu128 torch wheels) that require
# its own tool.uv.sources to resolve. Instead, it is installed into its own
# project venv at /opt/prime-rl in the Docker image; `PRIME_RL_CMD` in the
# container points at that venv. See infra/train.Dockerfile.
gpu = [
    "datasets>=2.20",
    "peft>=0.11",
    "wandb>=0.17",
]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "pytest-timeout>=2.3"]

[project.scripts]
train = "training.train:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/training"]

[tool.uv.sources]
agent = { path = "../agent" }
common = { path = "../common" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
